# src/features/cartItems/cartItems.routes.js
@@ -1,12 +1,0 @@
-import express from "express";
-import { CartItemsController } from './cartItems.controller.js';
-
-const cartRouter = express.Router();
-
-const cartController = new CartItemsController();
-
-cartRouter.delete('/:id', cartController.delete)
-cartRouter.get('/', cartController.get);
-cartRouter.post('/', cartController.add);
-
-export default cartRouter;
