# src/features/product/product.routes.js
@@ -1,42 +1,0 @@
-// Manage routes/paths to ProductController
-
-// 1. Import express.
-import express from 'express';
-import ProductController from './product.controller.js';
-import {upload} from '../../middlewares/fileupload.middleware.js';
-
-// 2. Initialize Express router.
-const productRouter = express.Router();
-const productController = new ProductController();
-
-// All the paths to the controller methods.
-// localhost/api/products 
-// localhost:4100/api/products/filter?minPrice=10&maxPrice=20&category=Category1
-
-productRouter.post(
-    '/rateProduct',
-    productController.rateProduct
-);
-
-productRouter.get(
-    '/filter',
-    productController.filterProducts
-);
-
-productRouter.get(
-    '/', 
-productController.getAllProducts
-);
-
-productRouter.post(
-    '/', 
-upload.single('imageUrl'), 
-productController.addProduct
-);
-
-productRouter.get(
-    '/:id',
-    productController.getOneProduct
-);
-
-export default productRouter;
